{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 444,
  "lineage": "5ac62eb4-32b4-5ba3-1946-17f0b0de4018",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "clixxeip1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cfd484fc4406d266",
            "domain": "vpc",
            "id": "eipalloc-0cfd484fc4406d266",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-3-218-112-183.compute-1.amazonaws.com",
            "public_ip": "3.218.112.183",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "clixxeip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af2fe050a75f14dd",
            "domain": "vpc",
            "id": "eipalloc-0af2fe050a75f14dd",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-35-175-100-67.compute-1.amazonaws.com",
            "public_ip": "35.175.100.67",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "clixxigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:internet-gateway/igw-026e7dc77cc94382b",
            "id": "igw-026e7dc77cc94382b",
            "owner_id": "597529641504",
            "tags": {
              "Backup": "yes",
              "Name": "clixxigw",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "clixxigw",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "clixx-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:597529641504:loadbalancer/app/clixx-lb/727d8f6cc902f38b",
            "arn_suffix": "app/clixx-lb/727d8f6cc902f38b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "clixx-lb-2004153552.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:597529641504:loadbalancer/app/clixx-lb/727d8f6cc902f38b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "clixx-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-084d22bfe4c77cdf3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-036ea135c1f0b0b8f"
              },
              {
                "subnet_id": "subnet-09ec3c1b25acad2c2"
              }
            ],
            "subnets": [
              "subnet-036ea135c1f0b0b8f",
              "subnet-09ec3c1b25acad2c2"
            ],
            "vpc_id": "vpc-03e701afb42890bc4",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_subnet.pubsub1",
            "aws_subnet.pubsub2",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:597529641504:listener/app/clixx-lb/727d8f6cc902f38b/d5121a85cae05102",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:597529641504:targetgroup/stack-tg/5f901e5e1ca5c16e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:597529641504:listener/app/clixx-lb/727d8f6cc902f38b/d5121a85cae05102",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:597529641504:loadbalancer/app/clixx-lb/727d8f6cc902f38b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.clixx-lb",
            "aws_lb_target_group.clixx-tg",
            "aws_security_group.lb-sg",
            "aws_subnet.pubsub1",
            "aws_subnet.pubsub2",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "clixx-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:597529641504:targetgroup/stack-tg/5f901e5e1ca5c16e",
            "arn_suffix": "targetgroup/stack-tg/5f901e5e1ca5c16e",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:597529641504:targetgroup/stack-tg/5f901e5e1ca5c16e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "stack-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "clixxnat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cfd484fc4406d266",
            "connectivity_type": "public",
            "id": "nat-03deb96590dfaddff",
            "network_interface_id": "eni-03d860ebfd982946f",
            "private_ip": "10.0.1.145",
            "public_ip": "3.218.112.183",
            "subnet_id": "subnet-036ea135c1f0b0b8f",
            "tags": {
              "Backup": "yes",
              "Name": "clixxnat1",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "clixxnat1",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            }
          },
          "dependencies": [
            "aws_eip.clixxeip1",
            "aws_internet_gateway.clixxigw",
            "aws_subnet.pubsub1",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "clixxnat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0af2fe050a75f14dd",
            "connectivity_type": "public",
            "id": "nat-0cdf1f7e017584294",
            "network_interface_id": "eni-06dcd2a65ccb1ba84",
            "private_ip": "10.0.2.166",
            "public_ip": "35.175.100.67",
            "subnet_id": "subnet-09ec3c1b25acad2c2",
            "tags": {
              "Backup": "yes",
              "Name": "clixxnat2",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "clixxnat2",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            }
          },
          "dependencies": [
            "aws_eip.clixxeip2",
            "aws_internet_gateway.clixxigw",
            "aws_subnet.pubsub2",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "clixxprivroute1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:route-table/rtb-0eabf3d3a3efe83f1",
            "id": "rtb-0eabf3d3a3efe83f1",
            "owner_id": "597529641504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-03deb96590dfaddff",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Backup": "yes",
              "Name": "clixxprivroute1",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "clixxprivroute1",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.clixxeip1",
            "aws_internet_gateway.clixxigw",
            "aws_nat_gateway.clixxnat1",
            "aws_subnet.pubsub1",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "clixxprivroute2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:route-table/rtb-0e42cfbb49717f712",
            "id": "rtb-0e42cfbb49717f712",
            "owner_id": "597529641504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0cdf1f7e017584294",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Backup": "yes",
              "Name": "clixxprivroute2",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "clixxprivroute2",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.clixxeip2",
            "aws_internet_gateway.clixxigw",
            "aws_nat_gateway.clixxnat2",
            "aws_subnet.pubsub2",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "clixxpubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:route-table/rtb-08cd66a925aa5263d",
            "id": "rtb-08cd66a925aa5263d",
            "owner_id": "597529641504",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-026e7dc77cc94382b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Backup": "yes",
              "Name": "clixxpubroute",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "clixxpubroute",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "timeouts": null,
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.clixxigw",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "clixxprivsub-assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060d83cbc7b1f399a",
            "route_table_id": "rtb-0eabf3d3a3efe83f1",
            "subnet_id": "subnet-092c0e4d159a4503e"
          },
          "dependencies": [
            "aws_eip.clixxeip1",
            "aws_internet_gateway.clixxigw",
            "aws_nat_gateway.clixxnat1",
            "aws_route_table.clixxprivroute1",
            "aws_subnet.privsub1",
            "aws_subnet.pubsub1",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "clixxpubsub-assoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02f2673966b064384",
            "route_table_id": "rtb-08cd66a925aa5263d",
            "subnet_id": "subnet-036ea135c1f0b0b8f"
          },
          "dependencies": [
            "aws_internet_gateway.clixxigw",
            "aws_route_table.clixxpubroute",
            "aws_subnet.pubsub1",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "clixxpubsub-assoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015644fd4a637b00c",
            "route_table_id": "rtb-08cd66a925aa5263d",
            "subnet_id": "subnet-09ec3c1b25acad2c2"
          },
          "dependencies": [
            "aws_internet_gateway.clixxigw",
            "aws_route_table.clixxpubroute",
            "aws_subnet.pubsub2",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:security-group/sg-025b2fad30780c896",
            "description": "Bastion server Security Group",
            "egress": [],
            "id": "sg-025b2fad30780c896",
            "ingress": [],
            "name": "bastion-sg",
            "name_prefix": "",
            "owner_id": "597529641504",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "efs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:security-group/sg-0b559994409d7f3c2",
            "description": "EFS Security Group",
            "egress": [],
            "id": "sg-0b559994409d7f3c2",
            "ingress": [],
            "name": "EFS-sg",
            "name_prefix": "",
            "owner_id": "597529641504",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:security-group/sg-084d22bfe4c77cdf3",
            "description": "Load Balancer Security Group",
            "egress": [],
            "id": "sg-084d22bfe4c77cdf3",
            "ingress": [],
            "name": "loadbalancer-sg",
            "name_prefix": "",
            "owner_id": "597529641504",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lt-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:security-group/sg-034f08a0e39b208fe",
            "description": "Launch Template Security Group",
            "egress": [],
            "id": "sg-034f08a0e39b208fe",
            "ingress": [],
            "name": "launchtemplate-sg",
            "name_prefix": "",
            "owner_id": "597529641504",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:security-group/sg-02143844e36662c9f",
            "description": "RDS Security Group",
            "egress": [],
            "id": "sg-02143844e36662c9f",
            "ingress": [],
            "name": "RDS-sg",
            "name_prefix": "",
            "owner_id": "597529641504",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-egress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-802392202",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-025b2fad30780c896",
            "security_group_rule_id": "sgr-087ee1e48fed39de0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1442492392",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-025b2fad30780c896",
            "security_group_rule_id": "sgr-0bd6c0457f74e5213",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-https-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-1995305109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-025b2fad30780c896",
            "security_group_rule_id": "sgr-03249844e0e041d69",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-mysql-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-3594306773",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02143844e36662c9f",
            "security_group_rule_id": "sgr-0c9a559972881d32a",
            "self": false,
            "source_security_group_id": "sg-025b2fad30780c896",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.rds-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bastion-ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 22,
            "id": "sgrule-3815830109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-025b2fad30780c896",
            "security_group_rule_id": "sgr-0580d1b94f3568c1a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs-egress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4045905504",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0b559994409d7f3c2",
            "security_group_rule_id": "sgr-09f00e73608fe1b9d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "efs-nfs-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-1597392075",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0b559994409d7f3c2",
            "security_group_rule_id": "sgr-01cd3ace43d95fc4f",
            "self": false,
            "source_security_group_id": "sg-034f08a0e39b208fe",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs-sg",
            "aws_security_group.lt-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-egress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2729691005",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-084d22bfe4c77cdf3",
            "security_group_rule_id": "sgr-0b8499c023325974b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1402326098",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-084d22bfe4c77cdf3",
            "security_group_rule_id": "sgr-073b991848e8b29f7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lb-https-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 443,
            "id": "sgrule-3162275882",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-084d22bfe4c77cdf3",
            "security_group_rule_id": "sgr-086b276b8ed9d4bf7",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lt-egress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3072746035",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-034f08a0e39b208fe",
            "security_group_rule_id": "sgr-067c68f47faf22397",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lt-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lt-http-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2077546648",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-034f08a0e39b208fe",
            "security_group_rule_id": "sgr-0b720a3c1f7f2f3b1",
            "self": false,
            "source_security_group_id": "sg-084d22bfe4c77cdf3",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_security_group.lt-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lt-https-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 443,
            "id": "sgrule-649807748",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-034f08a0e39b208fe",
            "security_group_rule_id": "sgr-091f3eae931d53515",
            "self": false,
            "source_security_group_id": "sg-084d22bfe4c77cdf3",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb-sg",
            "aws_security_group.lt-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lt-mysql-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 3306,
            "id": "sgrule-2258356122",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02143844e36662c9f",
            "security_group_rule_id": "sgr-0c975392af0bb0d21",
            "self": false,
            "source_security_group_id": "sg-034f08a0e39b208fe",
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lt-sg",
            "aws_security_group.rds-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lt-nfs-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 2049,
            "id": "sgrule-3582234272",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-034f08a0e39b208fe",
            "security_group_rule_id": "sgr-06af1e57799bfcd57",
            "self": false,
            "source_security_group_id": "sg-0b559994409d7f3c2",
            "timeouts": null,
            "to_port": 2049,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.efs-sg",
            "aws_security_group.lt-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "lt-ssh-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 22,
            "id": "sgrule-2240930815",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-034f08a0e39b208fe",
            "security_group_rule_id": "sgr-08fb6170c26fd1f4d",
            "self": false,
            "source_security_group_id": "sg-025b2fad30780c896",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.bastion-sg",
            "aws_security_group.lt-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds-egress-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-2097815709",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02143844e36662c9f",
            "security_group_rule_id": "sgr-031a54205bfc8b6f5",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.rds-sg",
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:subnet/subnet-092c0e4d159a4503e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-092c0e4d159a4503e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597529641504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Backup": "yes",
              "Name": "privsub1",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "privsub1",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:subnet/subnet-0c4bf6c10da4753f1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.128/25",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c4bf6c10da4753f1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597529641504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Backup": "yes",
              "Name": "privsub2",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "privsub2",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:subnet/subnet-022b6234e1704f1e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.8.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-022b6234e1704f1e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597529641504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Backup": "yes",
              "Name": "privsub3",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "privsub3",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:subnet/subnet-0900c0f6ed38bc068",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.12.0/22",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0900c0f6ed38bc068",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597529641504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Backup": "yes",
              "Name": "privsub4",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "privsub4",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:subnet/subnet-036ea135c1f0b0b8f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-036ea135c1f0b0b8f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597529641504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Backup": "yes",
              "Name": "pubsub1",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "pubsub1",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:subnet/subnet-09ec3c1b25acad2c2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/23",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09ec3c1b25acad2c2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "597529641504",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Backup": "yes",
              "Name": "pubsub2",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "pubsub2",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "clixxvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:vpc/vpc-03e701afb42890bc4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0739b3527a9b6abac",
            "default_route_table_id": "rtb-01c37498f6b4e392e",
            "default_security_group_id": "sg-02df1e1c34ff93a7c",
            "dhcp_options_id": "dopt-6ea7f014",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03e701afb42890bc4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01c37498f6b4e392e",
            "owner_id": "597529641504",
            "tags": {
              "Backup": "yes",
              "Name": "clixxvpc",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "clixxvpc",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "clixxendpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:597529641504:vpc-endpoint/vpce-00e02aa2ffd30c280",
            "cidr_blocks": [
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21"
            ],
            "id": "vpce-00e02aa2ffd30c280",
            "owner_id": "597529641504",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "tags": {
              "Backup": "yes",
              "Name": "clixxendpoint",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "tags_all": {
              "Backup": "yes",
              "Name": "clixxendpoint",
              "OwnerEmail": "mohamedxkamara@gmail.com",
              "Schedule": "A",
              "StackTeam": "stackcloud9"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-03e701afb42890bc4"
          },
          "dependencies": [
            "aws_vpc.clixxvpc"
          ]
        }
      ]
    }
  ]
}